# feedback-generation

./: .env.example  .gitignore  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
api/: pyproject.toml
api/api/: api.py  helpers.py  mistral_patch.py  utils.py
api/data/: answers.json  details.json  message_template.txt  quiz.json  system_template.txt
src/: App.tsx  index.css
src/components/: error-message.tsx  feedback.tsx  quiz-completed.tsx  quiz-loader.tsx
src/components/ui/: scroll-area.tsx
